# shyhurricane

./: .dockerignore  .gitignore  Brewfile  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  assistant.py  dev_requirements.txt  doc_type_model_map.py  docker-compose.amd.yml  docker-compose.dev.yml  docker-compose.nvidia.yml  docker-compose.yml  htb_ctf_prep.py  ingest.py  ingest_queue.py  mcp_service.py  pipeline.py  port_scan_queue.py  prompts.py  pyproject.toml  requirements.txt  spider_queue.py  utils.py
.github/: dependabot.yml
.github/workflows/: app.yaml  build.yaml  test.yaml
.junie/: AGENTS.md
docs/: architecture.md  hack-and-cast.sh  other_projects.md  solves.md
shyhurricane/: clean_css.py  cleaners.py  config.py  db.py  doc_type_model_map.py  embedder_cache.py  generator_config.py  http_csv.py  mcp_client.py  mcp_prompt_toolset.py  nuclei_findings.py  persistent_queue.py  ports.py  prompts.py  rate_limit.py  retrieval_pipeline.py  server_config.py  streaming_chunk_writer.py  target_info.py  utils.py
tests/: conftest.py  google-api-key-check.sh  pytest.ini  requirements.txt  test_batch_iterable.py  test_clean_css.py  test_cleaners_more.py  test_coerce.py  test_collapse_first_repeated_sequence.py  test_config.py  test_db.py  test_doc_cleaner.py  test_doc_type_model_map.py  test_embedder_cache.py  test_generator_config.py  test_http_csv.py  test_http_csv_more.py  test_mcp_client.py  test_munge_urls.py  test_normalize_html.py  test_nuclei_findings.py  test_nuclei_findings_more.py  test_ollama_generator_config_paths.py  test_persistent_queue.py  test_pick_nic.py  test_ports.py  test_proxy_server.py  test_query_expander.py  test_rate_limit.py  test_remove_unencodable.py  test_retrieval_pipeline_more.py  test_server_config.py  test_stream_lines.py  test_streaming_chunk_writer.py  test_target_info.py  test_utils_more.py  test_validate_container_file_path.py  test_vuln_type_parser.py  test_web_resources_pipeline_more.py  test_web_resources_worker_more.py  (+1 more)
(+159 files in other folders)
