[build-system]
requires = ["setuptools>=82.0"]
build-backend = "setuptools.build_meta"

[project]
name = "shyhurricane"
version = "0.1.0"
description = "MCP server to assist AI in offensive security testing of web applications"
authors = [
    { name = "Patrick Double", email = "pat@patdouble.com" }
]
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.12"
# see requirements.txt
dependencies = [
    "haystack-ai~=2.30.0",
    "qdrant-haystack~=10.3.0",
    "fastembed-haystack~=2.3.0",
    "numpy<2",
    "ollama-haystack~=6.6.0",
    "amazon-bedrock-haystack~=6.11.0",
    "openai~=2.41.0",
    "google-genai-haystack~=4.3.0",
    "haystack-experimental~=0.19.0",
    "sentence-transformers~=5.5.1",
    "mcp[cli]~=1.27.2",
    "httpx~=0.28.1",
    "tldextract~=5.3.0",
    "validators~=0.35.0",
    "more-itertools~=11.1.0",
    "requests~=2.34.2",
    "beautifulsoup4~=4.15.0",
    "aiofiles~=25.1.0",
    "bitarray~=3.8.0",
    "persist-queue~=1.1.0",
    "lxml~=6.1.0",
    "tinycss2~=1.5.1",
    "json5~=0.14.0",
    "html5lib~=1.1",
    "optimum[onnxruntime]~=2.1.0",
    "pycryptodome~=3.23.0",
    "psutil~=7.2.1",
    "guppy3~=3.1.6",
    "einops~=0.8.1",
    "cachetools~=7.1.4",
    "pydantic",
]

[project.optional-dependencies]
dev = [
    "pytest~=9.0.2",
    "pytest-cov~=7.1.0",
    "ruff~=0.15.4",
    "parameterized~=0.9.0",
    "pytest-asyncio~=1.4.0",
    "respx~=0.23.1",
    "parameterized~=0.9.0",
]
